# living-story-world

./: .env.example  .gitignore  CHANGELOG.md  CI-CD.md  CONTRIBUTING.md  LICENSE  LivingStoryworld.spec  README.md  RELEASES.md  RELEASING.md  build-desktop.sh  build-executable.sh  build-tauri.sh  build_local.sh  pyproject.toml  requirements.txt  test-ci-local.sh
.github/workflows/: release.yml  test.yml
living_storyworld/: __main__.py  cli.py  config.py  desktop.py  exceptions.py  generator.py  image.py  models.py  presets.py  settings.py  storage.py  tui.py  webapp.py  wizard.py  world.py
living_storyworld/api/: __init__.py  chapters.py  dependencies.py  generate.py  images.py  settings.py  worlds.py
living_storyworld/providers/: __init__.py  image.py  text.py
living_storyworld/web/: app.js  index.html  styles.css
scripts/: smoke-test.ps1  smoke-test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  test_api.py  test_api_direct.py  test_error_handling.py  test_generator.py  test_image.py  test_imports.py  test_models.py  test_providers.py  test_providers_integration.py  test_settings.py  test_storage.py  test_webapp.py  test_world.py
